--- a/acssets/css/styles.css
+++ b/acssets/css/styles.css
@@ -25,6 +25,8 @@ a {
 }
 
 .btn {
+    display: flex;
+    align-items: center;
     max-height: 50px;
     padding: 11px 35px;
     border-radius: 24.5px;
